added calendar to dashboards and added some style

--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -34,3 +34,43 @@
 
   .has-events {}
 }
+
+.month-calendar {
+  .simple-calendar {
+  margin: 30px 100px;
+  margin-left: 30px;
+  height: 300px;
+  .day {
+  }
+
+  .wday-0 {}
+  .wday-1 {}
+  .wday-2 {}
+  .wday-3 {}
+  .wday-4 {}
+  .wday-5 {}
+  .wday-6 {}
+
+  .today {
+    background-color: rgba(250, 231, 129, 0.3);
+    background-color: rgba(215, 240, 226, 0.3);
+
+  }
+  .past {
+    background-color: rgba(254, 222, 217, 0.3);
+    background-color: white;
+  }
+  .future {
+    background-color: rgba(215, 240, 226, 0.3);
+    background-color: white;
+  }
+
+  .start-date {}
+
+  .prev-month {}
+  .next-month { }
+  .current-month {}
+
+  .has-events {}
+}
+}
