--- a/app/views/courses/_cardshow.html.erb
+++ b/app/views/courses/_cardshow.html.erb
@@ -1,5 +1,3 @@
 <div class="card-show">
-<span><%= locals[:occurence].course.name %></span>
-
-<span><%= locals[:occurence].date %></span>
+<span><%= locals[:occurence].course.name %></span>   <span><%= locals[:occurence].date %></span>
 </div>
