--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -27,6 +27,8 @@
 
 .nav-link {
   color: #ffffff !important;
+  margin-left: 5px;
+  margin-right: 5px;
    &:hover {
     letter-spacing: 3px;
     opacity: 0.7;
@@ -54,5 +56,8 @@
   width: 45px;
   height: 45px;
   border-radius: 50%;
+    &:hover {
+    opacity: 0.7;
+    cursor: pointer;
+  }
 }
-
