--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -8,8 +8,9 @@
   <h2 class="cards-header" style="padding: 10px; color: #018a79; font-family: pacifico; "><%= @course.name %> </h2>
   <div class="card-show-info" label="description"> <%= @course.description %> </div>
   <div class="card-show-info"><%= @course.location %></div>
-  <div class="card-show-info"> € <%= @course.price %> </div>
-  <%= link_to @course.user.name, user_path(@course.user.id), class: "btn btn-outline-success" %>
+  <div class="card-show-info" style="text-align: right; font-weight: bolder; font-size: 24px;"> € <%= @course.price %> </div>
+  <p>More info about the instructor:</p>
+  <p><%= link_to @course.user.name, user_path(@course.user.id), class: "btn btn-outline-success" %></p>
 </div>
 </div>
 <div class="occurence">
@@ -18,7 +19,6 @@
 <%= render "cardshow", locals: {occurence: occurence} %>
 <div class="link-courses">
 <% end %>
-
 <% if user_signed_in? %>
   <% if !current_user.teacher or current_user.nil? %>
     <%= link_to 'book', new_course_booking_path(@course), class: "btn btn-outline-success" %>
