--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,7 +25,7 @@
 
           <img src="https://res.cloudinary.com/dgmgwjok1/image/upload/c_scale,q_100,w_300/v1603823158/dane-wetton-t1NEMSm1rgI-unsplash_vyigoa.jpg" alt="course-image">
             <div class="card-course-infos">
-              <h2><%= course.name %></h2>
+              <h2><%= course.name.upcase %></h2>
               <%= link_to 'details', course_path(course), class: "btn btn-outline-success" %>
             </div>
         </div>
