--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div style="background-size: cover;">
-  <div class="card-category card-category-teacher" style="background-image: linear-gradient(rgba(34, 112, 103,0.3), rgba(34, 112, 103,0.3)), url(https://source.unsplash.com/500x500/?yoga)">
+  <div class="card-category card-category-teacher" style="background-image: linear-gradient(rgba(34, 112, 103,0.3), rgba(34, 112, 103,0.3)), url(https://source.unsplash.com/1000x1000/?yoga)">
     <div class="card-relative">
       <%= cl_image_tag @user.photo.key, class: "avatar-xlarge" %>
       <ul>
@@ -8,11 +8,33 @@
         <li> <%= @user.address.upcase %> </li>
       </ul>
     </div>
-    <h1> <%= @user.name.upcase %> </h1>
+    <h1><%= @user.name.upcase %> </h1>
   </div>
-</</div>
+</div>
 
   <div class="card-info">
     I am a yoga teacher based in Bali, Indonesia, where the sun sets on her yoga classes. This is more information that can be modified by Friday with a limited text of 500 characters so we don't get bored with all that nonsense!
   </div>
+</div>
+
+<div>
+  <%= week_calendar do |date| %>
+    <h6><%= date.day %></h6>
+    <% @courses.each do |course| %>
+      <% course.occurences.each do |occurence| %>
+        <% if occurence.date.to_datetime.to_date == date%>
+          <div class="border border-dark p-2 mb-2 ">
+            <%= occurence.course.name%>
+            <% if user_signed_in? %>
+              <% if current_user.teacher %>
+                <p class="mb-0"><i class="fas fa-users"></i> <%= occurence.bookings.size%></p>
+              <% else %>
+                <p class="mb-0"><%= link_to 'book', new_course_booking_path(course), class: "btn btn-outline-secondary py-0 my-2"%></p>
+              <% end %>
+            <% end %>
+          </div>
+        <% end %>
+      <% end %>
+    <% end %>
+  <% end %>
 </div>
