--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -53,12 +53,70 @@
 
   }
 
-  .bold-logo-div {
-    // margin-top: 200px;
-  }
+
+#fade-in {
+animation: fadeIn ease 5s;
+-webkit-animation: fadeIn ease 5s;
+-moz-animation: fadeIn ease 5s;
+-o-animation: fadeIn ease 5s;
+-ms-animation: fadeIn ease 5s;
+}
+@keyframes fadeIn {
+0% {opacity:0;}
+100% {opacity:1;}
+}
+
+@-moz-keyframes fadeIn {
+0% {opacity:0;}
+100% {opacity:1;}
+}
+
+@-webkit-keyframes fadeIn {
+0% {opacity:0;}
+100% {opacity:1;}
+}
+
+@-o-keyframes fadeIn {
+0% {opacity:0;}
+100% {opacity:1;}
+}
+
+@-ms-keyframes fadeIn {
+0% {opacity:0;}
+100% {opacity:1;}
+}
+
+// @keyframes flickerAnimation {
+//   0%   { opacity:1; }
+//   50%  { opacity:0; }
+//   100% { opacity:1; }
+// }
+// @-o-keyframes flickerAnimation{
+//   0%   { opacity:1; }
+//   50%  { opacity:0; }
+//   100% { opacity:1; }
+// }
+// @-moz-keyframes flickerAnimation{
+//   0%   { opacity:1; }
+//   50%  { opacity:0; }
+//   100% { opacity:1; }
+// }
+// @-webkit-keyframes flickerAnimation{
+//   0%   { opacity:1; }
+//   50%  { opacity:0; }
+//   100% { opacity:1; }
+// }
+// #fade-in {
+//    -webkit-animation: flickerAnimation 10s infinite;
+//    -moz-animation: flickerAnimation 10s infinite;
+//    -o-animation: flickerAnimation 10s infinite;
+//     animation: flickerAnimation 10s infinite;
+// }
 
 
-
+.link_to {
+  margin-left: 100px;
+}
 
 
 
