--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div id="search-bar">
   <div class="background-image" style="background-image: url(<%= asset_path'landing_background.jpg'%>)">
     <div class="bold-logo-div">
-      <img class="bold-logo" src="https://res.cloudinary.com/dolfny7hf/image/upload/v1603809296/Bold_est1tz.png" alt="bold-logo">
+      <img class="bold-logo" id="fade-in" src="https://res.cloudinary.com/dolfny7hf/image/upload/v1603809296/Bold_est1tz.png" alt="bold-logo">
     </div>
 
       <div class="search-bar-div">
@@ -18,17 +18,18 @@
     <div id="course-card-div">
   <!--     <div class="course-card-row"> -->
        <% @courses.each do  |course| %>
+        <%= link_to course_path(course) do %>
         <div class="card-course">
-
           <img src="https://res.cloudinary.com/dgmgwjok1/image/upload/c_scale,q_100,w_300/v1603823158/dane-wetton-t1NEMSm1rgI-unsplash_vyigoa.jpg" alt="course-image">
             <div class="card-course-infos">
               <h2><%= course.name %></h2>
-              <%= link_to 'details', course_path(course), class: "btn btn-outline-success" %>
+              <!-- <div class="link_to">  class: "btn btn-outline-success" %></div> -->
             </div>
         </div>
        <% end %>
       <!-- </div> -->
     </div>
+    <% end %>
 
     <div id="map"
          style="width: 50%; margin-left: 20px; height: 100vh; top: 0; position: sticky; object-fit: cover;"
