switched and added icons

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,9 +3,10 @@
     <div class="card-relative">
       <%= cl_image_tag @user.photo.key, class: "avatar-xlarge" %>
       <ul>
-        <li style="margin-top: 45px;"> <%= @user.email.upcase %> </li>
-        <li> <%= @user.telephone.upcase %> </li>
-        <li> <%= @user.address.upcase %> </li>
+        <li style="margin-top: 20px;"> <i class="fas fa-envelope"></i><%= @user.email.upcase %> </li>
+        <li> <i class="fas fa-phone"></i><%= @user.telephone.upcase %> </li>
+        <li><i class="fas fa-map-marker-alt"></i><%= @user.address.upcase %> </li>
+        <li><i class="fab fa-facebook-square"></i><i class="fab fa-instagram" style="margin-left: 15px;"></i></li>
       </ul>
     </div>
     <h1><%= @user.name.upcase %> </h1>
