--- a/app/views/pages/_info_window.html.erb
+++ b/app/views/pages/_info_window.html.erb
@@ -1,10 +1,11 @@
-<div id="mapboxgl-popup d-flex">
-  <div class="popup-img">
+<div id="mapboxgl-popup">
+<!--   <div class="popup-img">
     <img src="https://res.cloudinary.com/dgmgwjok1/image/upload/c_scale,q_100,w_220/v1603823158/dane-wetton-t1NEMSm1rgI-unsplash_vyigoa.jpg" alt="course-image">
   </div>
-  <div class="mapboxgl-popup-content">
-      <h2><%= course.name %></h2>
-      <p><%= course.location %></p>
-      <%= link_to 'details', course_path(course), class: "btn btn-outline-info mt-2" %>
+ -->  <div class="mapboxgl-popup-content">
+      <h4><%= occurence.course.name.upcase %></h4>
+      <h6><%= occurence.date %></h6>
+      <p><%= occurence.location %></p>
+      <%= link_to 'book', new_course_booking_path(occurence.course), class: "btn btn-outline-info mt-2" %>
   </div>
 </div>
