--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -105,21 +105,25 @@
 }
 
 .card-show {
-  background-color: #018a79;
+  background-color: #fff;
   background-size: cover;
   background-position: center;
   border: 1px solid #018a79;
   margin-bottom: 10px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: right;
   color: white;
   font-size: 20px;
   font-weight: bold;
   border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0,0,0,0.2);
   padding: 5px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin-top: 20px;
+  text-align: center;
 }
+
 .cards-header{
   font-weight:bold;
 }
@@ -201,6 +205,7 @@
   left: 50%;
   margin: -25px 0 0 -25px
 }
+
 
 
 
