--- a/app/views/courses/_cardshow.html.erb
+++ b/app/views/courses/_cardshow.html.erb
@@ -1,3 +1,14 @@
 <div class="card-show">
-<span><%= locals[:occurence].course.name %></span>   <span><%= locals[:occurence].date %></span>
+<span id="span-style"><%= locals[:occurence].course.name %></span><span id="span-style"><%= locals[:occurence].date %></span>
+<% if user_signed_in? %>
+  <% if !current_user.teacher or current_user.nil? %>
+  <span>
+    <%= link_to 'book', new_course_booking_path(@course), class: "btn btn-outline-success" %>
+  </span>
+  <% elsif @course.user == current_user %>
+    <%= link_to 'destroy', course_path(@course), method: :delete, data: { confirm: "Are you sure you would like to delete?" } %>
+  <% end %>
+<% else %>
+  <%= link_to 'sign in to book', new_user_session_path %>
+<% end %>
 </div>
