--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,11 +13,6 @@
             placeholder: "Find a Class"
           %> <%= submit_tag "Search", class: "btn btn-ghost" %>
         <% end %>
-
-        <form class="search-form">
-          <input class="search-bar" type="search" placeholder="Type of Yoga">
-        <a class="btn btn-ghost" href="#">Search</a>
-        </form>
       </div>
   </div>
 </div>
@@ -31,7 +26,7 @@
           <img src="https://res.cloudinary.com/dgmgwjok1/image/upload/c_scale,q_100,w_300/v1603823158/dane-wetton-t1NEMSm1rgI-unsplash_vyigoa.jpg" alt="course-image">
             <div class="card-course-infos">
               <h2><%= course.name %></h2>
-              <h2><%= course.user.name %></h2>
+              <p><%= course.user.name %></p>
             </div>
             <div class="button-link-to">
               <div class="link-to"><%= link_to 'details', course_path(course), class: "btn btn-outline-success" %></div>
