fixed calendar from month to week

--- a/app/assets/stylesheets/components/_calendar.scss
+++ b/app/assets/stylesheets/components/_calendar.scss
@@ -35,11 +35,11 @@
   .has-events {}
 }
 
-.month-calendar {
+.week-calendar-2 {
   .simple-calendar {
   margin: 30px 100px;
   margin-left: 30px;
-  height: 300px;
+  height: 600px;
   .day {
   }
 
