--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -20,14 +20,15 @@
 
     </div>
 
-    <div class="container month-calendar">
-      <%= month_calendar do |date| %>
+    <div class="container week-calendar-2">
+      <%= week_calendar number_of_weeks: 2 do |date| %>
         <h6><%= date.day %></h6>
         <% @user.courses.each do |course| %>
           <% course.occurences.each do |occurence| %>
             <% if occurence.date.to_datetime.to_date == date%>
-              <div>
-                <%= occurence.course.name%> - <%= link_to course_occurence_path(course, occurence), method: :delete, data: { confirm: "Are you sure you would like to delete?" } do %> <i class="far fa-trash-alt"></i> <% end %>
+              <div class="border border-dark p-2 mb-2 ">
+                <%= occurence.course.name%> <%= link_to course_occurence_path(course, occurence), method: :delete, data: { confirm: "Are you sure you would like to delete?" } do %> <i class="far fa-trash-alt"></i> <% end %>
+                <%= link_to "more info", course_path(occurence.course) %>
               </div>
             <% end %>
           <% end %>
@@ -50,8 +51,8 @@
 
     </div>
 
-    <div class="container month-calendar">
-      <%= month_calendar do |date| %>
+    <div class="container week-calendar-2">
+      <%= week_calendar number_of_weeks: 2 do |date| %>
         <h6><%= date.day %></h6>
         <% @user.bookings.each do |booking| %>
             <% if booking.occurence.date.to_datetime.to_date == date%>
