--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,18 +3,27 @@
     <div class="card-relative">
       <%= cl_image_tag @user.photo.key, class: "avatar-xlarge" %>
       <ul>
-        <li style="margin-top: 20px;"> <i class="fas fa-envelope"></i><%= @user.email.upcase %> </li>
-        <li> <i class="fas fa-phone"></i><%= @user.telephone.upcase %> </li>
-        <li><i class="fas fa-map-marker-alt"></i><%= @user.address.upcase %> </li>
-        <li><i class="fab fa-facebook-square"></i><i class="fab fa-instagram" style="margin-left: 15px;"></i></li>
+        <li style="margin-top: 24px;"><i class="fas fa-envelope"></i> <%= @user.email.upcase %> </li>
+        <li><i class="fas fa-phone"></i> <%= @user.telephone.upcase %> </li>
+        <li><i class="fas fa-map-marker-alt"></i> <%= @user.address.upcase %> </li>
       </ul>
+      <% if @user.facebook.present? %>
+          <a target="_blank" href=<%= @user.facebook %>><i class="fab fa-facebook-square"></i></a>
+      <% end %>
+      <% if @user.instagram.present? %>
+          <a  target="_blank" href=<%= "https://www.instagram.com/#{@user.instagram}/"%>><i class="fab fa-instagram-square"></i></a>
+      <% end %>
     </div>
     <h1><%= @user.name.upcase %> </h1>
   </div>
 </div>
 
   <div class="card-info">
-    I am a yoga teacher based in Bali, Indonesia, where the sun sets on her yoga classes. This is more information that can be modified by Friday with a limited text of 500 characters so we don't get bored with all that nonsense!
+    <% if @user.biography.present? %>
+      <%= @user.biography %>
+    <% else %>
+      I am a yoga teacher based in Bali, Indonesia, where the sun sets on her yoga classes. This is more information that can be modified by Friday with a limited text of 500 characters so we don't get bored with all that nonsense!
+    <% end %>
   </div>
 </div>
 
@@ -28,7 +37,7 @@
             <%= occurence.course.name%>
             <% if user_signed_in? %>
               <% if current_user.teacher %>
-                <p class="mb-0"><i class="fas fa-users"></i> <%= occurence.bookings.size%></p>
+                <p class="mb-0">(<i class="fas fa-users"></i> <%= occurence.bookings.size%> joined) </p>
               <% else %>
                 <p class="mb-0"><%= link_to 'book', new_course_booking_path(course), class: "btn btn-outline-secondary py-0 my-2"%></p>
               <% end %>
