--- a/app/assets/stylesheets/pages/_devise.scss
+++ b/app/assets/stylesheets/pages/_devise.scss
@@ -9,7 +9,7 @@
 }
 
 #sign-up {
-  height: 950px;
+  height: 1250px;
   width: 70%;
 }
 
@@ -71,4 +71,10 @@
   border: 1px solid #005B50;
 }
 
+#update-course {
+  height: 550px;
+}
 
+#box-book {
+  height: 250px;
+}
