--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -1,8 +1,10 @@
+<div class="container-lg" id="update-course">
 <%= simple_form_for(course) do |f| %>
   <%= f.input :name %>
   <%= f.input :description %>
   <%= f.input :photo, as: :file %>
   <%= f.input :duration,  input_html: { type: 'number' } %>
   <%= f.input :price,  input_html: { type: 'number' } %>
-  <%= f.submit %>
+  <%= f.submit class: "btn btn-outline-success"%>
 <% end %>
+</div>
