--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,4 @@
+  <div class="container-lg">
   <h2>Change your password</h2>
 
   <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
@@ -26,3 +27,4 @@
   <% end %>
 
   <%= render "devise/shared/links" %>
+</div>
