--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -1,3 +1,5 @@
+
+<div class="container-lg">
 <h2>Resend unlock instructions</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: unlock_path(resource_name), html: { method: :post }) do |f| %>
@@ -17,3 +19,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
