fixed course image to key

--- a/app/assets/stylesheets/pages/_courses.scss
+++ b/app/assets/stylesheets/pages/_courses.scss
@@ -6,6 +6,7 @@
 .course-img img {
   border-radius: 5px;
   display: flex;
+  width: 400px;
   justify-content: center;
   align-items: center;
   overflow: hidden;
